[package]
name = "fstw"
version = "0.1.0"
authors = ["thoo0224 <thomasplatschorre@gmail.com>"]
edition = "2018"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'

[dependencies]
tokio = { version = "0.2.22", features = ["full"] }
serde = { version = "1.0.114", features = ["derive"] }
reqwest = { version = "0.10.7", features = ["json"] }
serde_json = "1.0.57"
